# mev-burn-indexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DELIVERABLES.md  Dockerfile  LICENSE.md  README.md  docker-compose.monitoring.yml  docker-compose.yml  export_sample_data.sh  sample_transactions.csv  start.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  MONITORING.md  PART3_COMPLETION.md
migrations/: 20240101000000_create_transactions_table.sql  20240101000001_create_balance_changes_table.sql
monitoring/: prometheus-docker.yml  prometheus.yml
monitoring/grafana/dashboards/: mev-burn-dashboard.json  mev-burn-expanded.json  mev-burn-indexer.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: postgres.yml
monitoring/scripts/: create_grafana_user.sh
sample_data/: sample_balance_changes.csv  sample_transactions.csv  summary_statistics.txt
src/: config.rs  error.rs  main.rs  metrics.rs  metrics_server.rs  telemetry.rs
src/database/: connection.rs  repository.rs
src/grpc/: client.rs  mod.rs  stream_handler.rs
src/solana/: models.rs  parser.rs
